# salomon_case

./: .gitignore  README.md  pyproject.toml
data/mock/: README.md  channel_daily.csv  consumer_services.csv  customer_orders.csv  ecommerce_daily.csv  product_daily.csv  search_console_daily.csv
deliverables/: UG15_Campaign_Readout.pptx  VestalPro_Campaign_Readout.pptx  VestalPro_Campaign_Readout_iter1.pptx  VestalPro_Campaign_Readout_iter2.pptx  ~$VestalPro_Campaign_Readout.pptx
docs/: assumptions.md  data_generation_spec.md  metric_definitions.md
notebooks/: 01_data_validation.ipynb  02_campaign_scorecard.ipynb  03_campaign_analysis.ipynb  analysis.ipynb  campaign_analysis.ipynb
src/: generate_data.py  generate_mock_data.py  generate_search_console_data.py  make_appendix_charts.py  validate_data.py
