[project]
name = "salomon-case"
version = "0.1.0"
description = "Reproducible campaign analysis for the Salomon Vestal Pro case study"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ipykernel>=7.0,<8",
  "jupyter>=1.1,<2",
  "kaleido==0.2.1",
  "matplotlib>=3.8,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
  "plotly>=6.0,<7",
]

[tool.uv]
package = false
